--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,2 +1,2 @@
 <h1><%= @student.to_s %></h1>
-<p><%= @student.active ? @student.active : "This student is currently inactive."%></p>
+<p><%= @student.active ? "This student is currently active." : "This student is currently inactive."%></p>
